--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <body>
 
-    <div class="jumbotron center-text">
+
+    <div class="jumbotron text-center">
       <h1>Feelin' Cool</h1>
       <span class="glyphicon glyphicon-headphones"></span>
       <span class="glyphicon glyphicon-headphones"></span>
@@ -33,6 +34,8 @@
       <span class="glyphicon glyphicon-music"></span>
     </div>
 
+
+
     <div class="container-fluid" id="pageContainer">
           <div class="row">
             <div class="col-xs-3 hundred" id="aside">
@@ -44,18 +47,18 @@
               </div>
 
               <div class="radio">
-                <label><input type="radio" value="yes" name="cool">Yea, I'm cool.</label>
+                <label for="cool"><input type="radio" value="yes" id="cool" name="cool">Yea, I'm cool.</label>
               </div>
-              <div class="radio-inline">
-                <label><input type="radio" value="no" name="cool">Naw, I'm not cool</label>
+              <div class="radio">
+                <label for="notcool"><input type="radio" value="no" id="notcool" name="cool">Naw, I'm not cool.</label>
               </div>
 
               <div class="form-group">
               <label for="sayin">Whatcha Sayin?</label>
                   <select class="form-control" id="sayin">
-                    <option>I'm cool</option>
-                    <option>Don't make me tell you again I'm cool</option>
-                    <option>I'm cool with tellin you again</option>
+                    <option>I'm cool.</option>
+                    <option>Don't make me tell you again I'm cool.</option>
+                    <option>I'm cool with tellin you again I'm cool.</option>
                   </select>
                 </div>
 
@@ -68,7 +71,7 @@
                   <div class="row">
                       <div class="col-xs-1 innerArticle"></div>
                           <div class="col-xs-10 innerArticle">
-                            <img src="bootsy.jpg"/ id="bootsy">
+                            <img src="bootsy.jpg" id="bootsy" data-toggle="tooltip" title="You're cool baby!">
                             <p>Rising to prominence with James Brown in the early 1970s,
                               and later with Parliament-Funkadelic, Collins's driving bass
                               guitar and humorous vocals established him as one of the leading names
@@ -105,13 +108,41 @@
             </div>
 
             <div class="col-xs-1 hundred" id="rightSide"></div>
-
-            <div class="col-xs-12" id="foot">
-                <span class="glyphicon glyphicon-copyright-mark" id="copyright"></span>
+      </div>
+      <!--Footer-->
+          <div class="row" id="foot">
+            <div class="col-xs-2 text-left">
+                <span class="glyphicon glyphicon-copyright-mark"></span>
             </div>
+
+            <div class="col-xs-2 purp text-center">
+              <span class="glyphicon glyphicon-sunglasses">
+            </span></div>
+
+            <div class="col-xs-2"></div>
+
+            <div class="col-xs-2 purp text-center">
+              <span class="glyphicon glyphicon-music"></span>
+            </div>
+
+            <div class="col-xs-2 text-center">
+              <a href="#">CONTACT</a>
+            </div>
+
+            <div class="col-xs-2 purp text-center">
+              <span class="glyphicon glyphicon-headphones"></span>
+            </div>
+
           </div>
+
+
     </div>
 
+    <script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+    </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
